# LogAnalyzerAI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.yaml
examples/sample_logs/: system.json
src/: __init__.py  cli.py  main.py  orchestrator.py
src/agents/: __init__.py  alert_agent.py  anomaly_agent.py  base.py  correlation_agent.py  metrics_agent.py  parser_agent.py  pattern_agent.py  summary_agent.py
src/connectors/: __init__.py  filesystem.py  log_parser.py  stream.py
src/models/: __init__.py  analysis_state.py  log_entry.py  schemas.py
src/utils/: __init__.py  config.py  logger.py  metrics.py  retry.py  serializers.py  severity.py
tests/: conftest.py  test_alert_agent.py  test_anomaly_agent.py  test_cli.py  test_connectors.py  test_correlation_agent.py  test_metrics_agent.py  test_models.py  test_orchestrator.py  test_parser_agent.py  test_utils.py
